Correction des filtres de carte V1

--- a/Fiche_projet_103.html
+++ b/Fiche_projet_103.html
@@ -391,7 +391,7 @@ display: none;
 
         <div class="project-section">
           <h3>Publication</h3>
-          <p>-https://lnkd.in/gqik27Vn</p>
+          <p><a href="https://lnkd.in/gqik27Vn" target="_blank">https://lnkd.in/gqik27Vn</a></p>
         </div>
 
         <!-- <div class="card-logo">
